--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
       </div>
     </div>
 
-    <img class="logo centered hidden" src="./assets/img/logo.png" />
-    <!--        <img class="logo centered" src="./assets/img/logo.png">-->
+    <img
+      class="logo centered hidden"
+      src="./assets/img/logo.png"
+      alt="Czarverse"
+      title="Czarverse"
+    />
 
     <div class="menu hidden">
       <a href="javascript:void(0)" class="menu-close">
@@ -64,11 +68,6 @@
             class="title"
           />
           <div class="scene-content-title">feel our<br />ambraace</div>
-          <!--          <h2>DON'T TRY TO RUN AWAY! 1</h2>-->
-          <!--          <p>-->
-          <!--            Better join the community and take part in CZARVERSE evolution with a team of veteran game developers-->
-          <!--            who are tired of creating formulaic worlds.-->
-          <!--          </p>-->
           <a href="#">MARKET</a>
         </div>
       </div>
@@ -80,11 +79,6 @@
             class="title"
           />
           <div class="scene-content-title">don’t try to<br />run away!</div>
-          <!--          <h2>DON'T TRY TO RUN AWAY! 2</h2>-->
-          <!--          <p>-->
-          <!--  Better join the community and take part in CZARVERSE evolution with a team of veteran game developers-->
-          <!--  who are tired of creating formulaic worlds.-->
-          <!--          </p>-->
           <a href="#">WATCH VIDEO</a>
         </div>
       </div>
@@ -96,11 +90,6 @@
             class="title"
           />
           <div class="scene-content-title">don’t try to<br />run away!</div>
-          <!--          <h2>DON'T TRY TO RUN AWAY! 3</h2>-->
-          <!--          <p>-->
-          <!--  Better join the community and take part in CZARVERSE evolution with a team of veteran game developers-->
-          <!--  who are tired of creating formulaic worlds.-->
-          <!--          </p>-->
           <a href="#">WATCH VIDEO</a>
         </div>
       </div>
@@ -244,17 +233,8 @@
               plans and work within a few.
             </p>
           </div>
-
-          <!--        <div class="text-block" style="margin-top: 280px;">-->
-          <!--          <img src="./assets/img/section-3/5.png" class="avatar" style="margin-bottom: 60px;">-->
-
-          <!--          <h2 class="title">IPOS</h2>-->
-          <!--          <p style="width: 300px;">A summary of our plans and work within a few lines. A summary of our plans and work within a few lines.</p>-->
-          <!--        </div>-->
         </div>
       </div>
-
-      <!--      <a href="#" class="buy-button">BUY TOKENS</a>-->
 
       <div class="section-4">
         <div class="poster"></div>
@@ -275,8 +255,6 @@
             <span>DISCUSS</span>
           </a>
         </div>
-
-        <!-- <a href="#" class="buy-button">BUY TOKENS</a> -->
       </div>
 
       <div class="section-animation"></div>
