--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             class="title"
           />
           <div class="scene-content-title">feel our<br />ambraace</div>
-          <a href="#">MARKET</a>
+          <a href="#" class="button">MARKET</a>
         </div>
       </div>
 
@@ -79,7 +79,7 @@
             class="title"
           />
           <div class="scene-content-title">don’t try to<br />run away!</div>
-          <a href="#">WATCH VIDEO</a>
+          <a href="#" class="button">WATCH VIDEO</a>
         </div>
       </div>
 
@@ -90,7 +90,7 @@
             class="title"
           />
           <div class="scene-content-title">don’t try to<br />run away!</div>
-          <a href="#">WATCH VIDEO</a>
+          <a href="#" class="button">WATCH VIDEO</a>
         </div>
       </div>
 
@@ -152,7 +152,7 @@
                 of our plans and work wi in a few lines. A summary of our plans
                 and work with the community in a few lines.
               </span>
-              <a href="#" class="more-button">MORE</a>
+              <a href="#" class="button more-button">MORE</a>
             </span>
           </div>
 
@@ -181,7 +181,7 @@
                 of our plans and work wi in a few lines. A summary of our plans
                 and work with the community in a few lines.
               </span>
-              <a href="#" class="more-button">MARKET</a>
+              <a href="#" class="button more-button">MARKET</a>
             </span>
           </div>
         </div>
