HTML / CSS are cleaned. Global styles are used

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <img
             src="./assets/img/section-1/main_page_title_1.svg"
             class="title"
+            alt=""
           />
           <div class="scene-content-title">feel our<br />ambraace</div>
           <a href="#" class="button">MARKET</a>
@@ -77,6 +78,7 @@
           <img
             src="./assets/img/section-1/main_page_title_2.svg"
             class="title"
+            alt=""
           />
           <div class="scene-content-title">don’t try to<br />run away!</div>
           <a href="#" class="button">WATCH VIDEO</a>
@@ -88,6 +90,7 @@
           <img
             src="./assets/img/section-1/main_page_title_3.svg"
             class="title"
+            alt=""
           />
           <div class="scene-content-title">don’t try to<br />run away!</div>
           <a href="#" class="button">WATCH VIDEO</a>
@@ -113,26 +116,21 @@
           </div>
 
           <div class="text-block right">
-            <span class="text-1">
-              <span class="left-hack">
+            <div class="text-block-text text-1">
+              <p>
                 A summary of our plans and work wi in a few lines. A summary of
                 our plans and work with the community in a few lines. A summary
                 of our plans and work wi in a few lines. A summary of our plans
                 and work with the community in a few lines.
-              </span>
-            </span>
+              </p>
+            </div>
           </div>
 
-          <div class="text-block left">
-            <img
-              src="./assets/img/section-2/Title_supress.svg"
-              class="supress"
-            />
-          </div>
-
-          <div class="text-block right">
-            <img src="./assets/img/section-2/Title_the_Riot.svg" class="riot" />
-          </div>
+          <img src="./assets/img/section-2/Title_supress.svg" class="supress" />
+          <img
+            src="./assets/img/section-2/Title_the_Riot.svg"
+            class="riot right"
+          />
 
           <div class="text-block left">
             <video
@@ -145,23 +143,21 @@
           </div>
 
           <div class="text-block right">
-            <span class="text-2">
-              <span class="left-hack">
+            <div class="text-block-text text-2">
+              <p>
                 A summary of our plans and work wi in a few lines. A summary of
                 our plans and work with the community in a few lines. A summary
                 of our plans and work wi in a few lines. A summary of our plans
                 and work with the community in a few lines.
-              </span>
+              </p>
               <a href="#" class="button more-button">MORE</a>
-            </span>
+            </div>
           </div>
 
-          <div class="text-block left">
-            <img
-              src="./assets/img/section-2/Title_Mint_Play_Discuss.svg"
-              class="mint"
-            />
-          </div>
+          <img
+            src="./assets/img/section-2/Title_Mint_Play_Discuss.svg"
+            class="mint"
+          />
 
           <div class="text-block right">
             <video
@@ -174,15 +170,15 @@
           </div>
 
           <div class="text-block left">
-            <span class="text-3">
-              <span class="left-hack">
+            <div class="text-block-text text-3">
+              <p>
                 A summary of our plans and work wi in a few lines. A summary of
                 our plans and work with the community in a few lines. A summary
                 of our plans and work wi in a few lines. A summary of our plans
                 and work with the community in a few lines.
-              </span>
+              </p>
               <a href="#" class="button more-button">MARKET</a>
-            </span>
+            </div>
           </div>
         </div>
       </div>
@@ -203,35 +199,41 @@
             <span class="background-text background-text-right">?</span>
           </div>
 
-          <div class="text-block centered">
+          <img
+            src="./assets/img/section-3/Title_from_street_to_gamedev.svg"
+            class="gamedev"
+          />
+
+          <div class="text-block right section-3-photo">
             <img
-              src="./assets/img/section-3/Title_from_street_to_gamedev.svg"
-              class="gamedev"
+              class="text-block-photo"
+              src="./assets/img/section-3/photo.png"
+              alt=""
             />
           </div>
 
-          <div class="text-block right section-3-photo">
-            <img src="./assets/img/section-3/photo.png" alt="" />
-          </div>
-
           <div class="text-block section-3-text-1">
-            <p>
-              A summary of our plans and work within a few lines. A summary of
-              our plans and work within a few lines. A summary of our plans and
-              work within a few lines.A summary of our plans and work within a
-              few lines. A summary of our plans and work within a few lines. A
-              summary of our plans and work within a few lines.
-            </p>
+            <div class="text-block-text">
+              <p>
+                A summary of our plans and work within a few lines. A summary of
+                our plans and work within a few lines. A summary of our plans
+                and work within a few lines.A summary of our plans and work
+                within a few lines. A summary of our plans and work within a few
+                lines. A summary of our plans and work within a few lines.
+              </p>
+            </div>
           </div>
 
           <div class="text-block right section-3-text-2">
-            <p>
-              A summary of our plans and work within a few lines. A summary of
-              our plans and work within a few.A summary of our plans and work
-              within a few lines. A summary of our plans and work within a few.A
-              summary of our plans and work within a few lines. A summary of our
-              plans and work within a few.
-            </p>
+            <div class="text-block-text">
+              <p>
+                A summary of our plans and work within a few lines. A summary of
+                our plans and work within a few.A summary of our plans and work
+                within a few lines. A summary of our plans and work within a
+                few.A summary of our plans and work within a few lines. A
+                summary of our plans and work within a few.
+              </p>
+            </div>
           </div>
         </div>
       </div>
