Replace Image Titles with Text Titles

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 
         <div class="text-blocks-container">
           <div class="text-block left">
-            <img
-              src="./assets/img/section-2/Title_Dont_blink.svg"
-              class="dont-blink"
-            />
+            <div class="text-block-title dont-blink">
+              <span>Don't</span>
+              <span>blink</span>
+            </div>
           </div>
 
           <div class="text-block right">
@@ -130,11 +130,11 @@
             </div>
           </div>
 
-          <img src="./assets/img/section-2/Title_supress.svg" class="supress" />
-          <img
-            src="./assets/img/section-2/Title_the_Riot.svg"
-            class="riot right"
-          />
+          <div class="text-block-title supress">Supress</div>
+          <div class="text-block-title riot">
+            <span>the</span>
+            <span>Riot</span>
+          </div>
 
           <div class="text-block left">
             <video
@@ -154,7 +154,9 @@
                 of our plans and work wi in a few lines. A summary of our plans
                 and work with the community in a few lines.
               </p>
-              <a href="#" class="button more-button">MORE</a>
+              <div class="button-wrapper">
+                <a href="#" class="button more-button">MORE</a>
+              </div>
             </div>
           </div>
 
@@ -181,7 +183,9 @@
                 of our plans and work wi in a few lines. A summary of our plans
                 and work with the community in a few lines.
               </p>
-              <a href="#" class="button more-button">MARKET</a>
+              <div class="button-wrapper">
+                <a href="#" class="button more-button">MARKET</a>
+              </div>
             </div>
           </div>
         </div>
