--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
                 of our plans and work wi in a few lines. A summary of our plans
                 and work with the community in a few lines.
               </p>
-              <a href="#" class="button more-button">MORE</a>
+              <div class="button-wrapper">
+                <a href="#" class="button more-button">MORE</a>
+              </div>
             </div>
           </div>
 
@@ -181,7 +183,9 @@
                 of our plans and work wi in a few lines. A summary of our plans
                 and work with the community in a few lines.
               </p>
-              <a href="#" class="button more-button">MARKET</a>
+              <div class="button-wrapper">
+                <a href="#" class="button more-button">MARKET</a>
+              </div>
             </div>
           </div>
         </div>
