--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
 
       <div class="long-scroll-container">
         <div class="canvas-container"></div>
+        <div
+          class="section-darken"
+          style="background-color: rgba(0, 0, 0, 0.7)"
+        ></div>
 
         <div class="text-blocks-container">
           <div class="text-block left">
@@ -186,6 +190,12 @@
               <div class="button-wrapper">
                 <a href="#" class="button more-button">MARKET</a>
               </div>
+            </div>
+          </div>
+
+          <div class="text-block center text-4">
+            <div class="button-wrapper">
+              <a href="#" class="button more-button">?????</a>
             </div>
           </div>
         </div>
