Dancing Devils Desktop

--- a/index.html
+++ b/index.html
@@ -209,48 +209,55 @@
       <!-- fake scene for scroll -->
 
       <div class="long-scroll-container">
-        <div class="canvas-container"></div>
+        <div class="canvas-sticky-container">
+          <div class="canvas-container"></div>
+        </div>
 
         <div class="text-blocks-container">
-          <div class="background-texts">
-            <span class="background-text background-text-left">WHO WE ARE</span>
-            <span class="background-text background-text-right">?</span>
-          </div>
-
-          <img
-            src="./assets/img/section-3/Title_from_street_to_gamedev.svg"
-            class="gamedev"
-          />
-
-          <div class="text-block right section-3-photo">
-            <img
-              class="text-block-photo"
-              src="./assets/img/section-3/photo.png"
-              alt=""
-            />
-          </div>
-
-          <div class="text-block section-3-text-1">
-            <div class="text-block-text">
-              <p>
-                A summary of our plans and work within a few lines. A summary of
-                our plans and work within a few lines. A summary of our plans
-                and work within a few lines.A summary of our plans and work
-                within a few lines. A summary of our plans and work within a few
-                lines. A summary of our plans and work within a few lines.
-              </p>
+          <div class="background-texts-sticky">
+            <div class="background-texts">
+              <span class="background-text background-text-left"
+                >WHO WE ARE</span
+              >
+              <span class="background-text background-text-right">?</span>
             </div>
-          </div>
 
-          <div class="text-block right section-3-text-2">
-            <div class="text-block-text">
-              <p>
-                A summary of our plans and work within a few lines. A summary of
-                our plans and work within a few.A summary of our plans and work
-                within a few lines. A summary of our plans and work within a
-                few.A summary of our plans and work within a few lines. A
-                summary of our plans and work within a few.
-              </p>
+            <img
+              src="./assets/img/section-3/Title_from_street_to_gamedev.svg"
+              class="gamedev"
+            />
+
+            <div class="text-block right section-3-photo">
+              <img
+                class="text-block-photo"
+                src="./assets/img/section-3/photo.png"
+                alt=""
+              />
+            </div>
+
+            <div class="text-block section-3-text-1">
+              <div class="text-block-text">
+                <p>
+                  A summary of our plans and work within a few lines. A summary
+                  of our plans and work within a few lines. A summary of our
+                  plans and work within a few lines.A summary of our plans and
+                  work within a few lines. A summary of our plans and work
+                  within a few lines. A summary of our plans and work within a
+                  few lines.
+                </p>
+              </div>
+            </div>
+
+            <div class="text-block right section-3-text-2">
+              <div class="text-block-text">
+                <p>
+                  A summary of our plans and work within a few lines. A summary
+                  of our plans and work within a few.A summary of our plans and
+                  work within a few lines. A summary of our plans and work
+                  within a few.A summary of our plans and work within a few
+                  lines. A summary of our plans and work within a few.
+                </p>
+              </div>
             </div>
           </div>
         </div>
