--- a/index.html
+++ b/index.html
@@ -192,12 +192,6 @@
               </div>
             </div>
           </div>
-
-          <div class="text-block center text-4">
-            <div class="button-wrapper">
-              <a href="#" class="button more-button">?????</a>
-            </div>
-          </div>
         </div>
       </div>
 
@@ -283,7 +277,7 @@
               <span>MINT</span>
             </a>
 
-            <a class="social" href="#" target="_blank">
+            <a class="social follow" href="#" target="_blank">
               <svg
                 class="social-logo"
                 xmlns="http://www.w3.org/2000/svg"
