Screen 2 from Zeplin

--- a/index.html
+++ b/index.html
@@ -141,13 +141,10 @@
           />
 
           <div class="text-block left">
-            <video
-              src="./assets/videos/tank_web.webm"
-              autoplay
-              muted
-              loop
-              class="riot-video"
-            ></video>
+            <video autoplay muted loop class="riot-video">
+              <source src="./assets/videos/video_1.mp4" type="video/mp4" />
+              <source src="./assets/videos/video_1.webm" type="video/webm" />
+            </video>
           </div>
 
           <div class="text-block right">
@@ -170,13 +167,10 @@
           />
 
           <div class="text-block right">
-            <video
-              src="./assets/videos/tank_web.webm"
-              autoplay
-              muted
-              loop
-              class="tank-video"
-            ></video>
+            <video autoplay muted loop class="tank-video">
+              <source src="./assets/videos/video_2.mp4" type="video/mp4" />
+              <source src="./assets/videos/video_2.webm" type="video/webm" />
+            </video>
           </div>
 
           <div class="text-block left">
@@ -190,6 +184,12 @@
               <div class="button-wrapper">
                 <a href="#" class="button more-button">MARKET</a>
               </div>
+            </div>
+          </div>
+
+          <div class="bottom-button">
+            <div class="button-wrapper">
+              <a href="javascript:void(0)" class="button">?????</a>
             </div>
           </div>
         </div>
