Screen 3 from Zeplin

--- a/index.html
+++ b/index.html
@@ -199,6 +199,14 @@
     </div>
 
     <div class="scroll-container section-3">
+      <a href="javascript:void(0)" class="back-arrow">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 31.64">
+          <polygon
+            points="25 0 0 24.72 7 31.64 24.96 13.88 43 31.64 50 24.72 25 0"
+          />
+        </svg>
+      </a>
+
       <div class="scene fake-scene"></div>
       <!-- fake scene for scroll -->
 
@@ -208,50 +216,49 @@
         </div>
 
         <div class="text-blocks-container">
+          <img
+            src="./assets/img/section-3/Title_from_street_to_gamedev.svg"
+            class="gamedev"
+          />
+
           <div class="background-texts-sticky">
             <div class="background-texts">
-              <span class="background-text background-text-left"
+              <img src="./assets/img/section-3/whoweare.svg" class="whoweare" />
+              <!-- <span class="background-text background-text-left"
                 >WHO WE ARE</span
               >
-              <span class="background-text background-text-right">?</span>
+              <span class="background-text background-text-right">?</span> -->
             </div>
 
-            <img
-              src="./assets/img/section-3/Title_from_street_to_gamedev.svg"
-              class="gamedev"
-            />
-
-            <div class="text-block right section-3-photo">
-              <img
-                class="text-block-photo"
-                src="./assets/img/section-3/photo.png"
-                alt=""
-              />
+            <div class="text-block right section-3-video">
+              <video autoplay muted loop>
+                <source src="./assets/videos/video_3.mp4" type="video/mp4" />
+                <source src="./assets/videos/video_3.webm" type="video/webm" />
+              </video>
             </div>
+          </div>
 
-            <div class="text-block section-3-text-1">
-              <div class="text-block-text">
-                <p>
-                  A summary of our plans and work within a few lines. A summary
-                  of our plans and work within a few lines. A summary of our
-                  plans and work within a few lines.A summary of our plans and
-                  work within a few lines. A summary of our plans and work
-                  within a few lines. A summary of our plans and work within a
-                  few lines.
-                </p>
-              </div>
+          <div class="text-block section-3-text-1">
+            <div class="text-block-text">
+              <p>
+                A summary of our plans and work within a few lines. A summary of
+                our plans and work within a few lines. A summary of our plans
+                and work within a few lines.A summary of our plans and work
+                within a few lines. A summary of our plans and work within a few
+                lines. A summary of our plans and work within a few lines.
+              </p>
             </div>
+          </div>
 
-            <div class="text-block right section-3-text-2">
-              <div class="text-block-text">
-                <p>
-                  A summary of our plans and work within a few lines. A summary
-                  of our plans and work within a few.A summary of our plans and
-                  work within a few lines. A summary of our plans and work
-                  within a few.A summary of our plans and work within a few
-                  lines. A summary of our plans and work within a few.
-                </p>
-              </div>
+          <div class="text-block right section-3-text-2">
+            <div class="text-block-text">
+              <p>
+                A summary of our plans and work within a few lines. A summary of
+                our plans and work within a few.A summary of our plans and work
+                within a few lines. A summary of our plans and work within a
+                few.A summary of our plans and work within a few lines. A
+                summary of our plans and work within a few.
+              </p>
             </div>
           </div>
         </div>
