--- a/index.html
+++ b/index.html
@@ -127,10 +127,6 @@
 
       <div class="long-scroll-container">
         <div class="canvas-container"></div>
-        <div
-          class="section-darken"
-          style="background-color: rgba(0, 0, 0, 0.7)"
-        ></div>
 
         <div class="text-blocks-container">
           <div class="text-block left">
@@ -158,7 +154,7 @@
           />
 
           <div class="text-block left">
-            <video autoplay muted loop class="riot-video">
+            <video autoplay muted loop playsinline class="riot-video">
               <source src="./assets/videos/video_1.mp4" type="video/mp4" />
               <source src="./assets/videos/video_1.webm" type="video/webm" />
             </video>
@@ -184,7 +180,7 @@
           />
 
           <div class="text-block right">
-            <video autoplay muted loop class="tank-video">
+            <video autoplay muted loop playsinline class="tank-video">
               <source src="./assets/videos/video_2.mp4" type="video/mp4" />
               <source src="./assets/videos/video_2.webm" type="video/webm" />
             </video>
@@ -253,7 +249,7 @@
             </div>
 
             <div class="text-block right section-3-video">
-              <video autoplay muted loop>
+              <video autoplay muted loop playsinline>
                 <source src="./assets/videos/video_3.mp4" type="video/mp4" />
                 <source src="./assets/videos/video_3.webm" type="video/webm" />
               </video>
