--- a/index.html
+++ b/index.html
@@ -139,10 +139,7 @@
           <div class="text-block right">
             <div class="text-block-text text-1">
               <p>
-                A summary of our plans and work wi in a few lines. A summary of
-                our plans and work with the community in a few lines. A summary
-                of our plans and work wi in a few lines. A summary of our plans
-                and work with the community in a few lines.
+                Comrades, rejoice! Czar, in his infinite wisdom, sees and knows all. Trust in his omniscience, for he alone can decipher the true meaning of your existence. Embrace the watchful eye of the Czar!
               </p>
             </div>
           </div>
@@ -163,10 +160,7 @@
           <div class="text-block right">
             <div class="text-block-text text-2">
               <p>
-                A summary of our plans and work wi in a few lines. A summary of
-                our plans and work with the community in a few lines. A summary
-                of our plans and work wi in a few lines. A summary of our plans
-                and work with the community in a few lines.
+                The Czar's wisdom is a privilege, not for all to fathom and accept. Resistance is inevitable! They don't seem to realize that this is just the perfect opportunity for us to compete in riot control. Be prepared!
               </p>
               <div class="button-wrapper">
                 <a href="#" class="button more-button">MORE</a>
@@ -189,10 +183,7 @@
           <div class="text-block left">
             <div class="text-block-text text-3">
               <p>
-                A summary of our plans and work wi in a few lines. A summary of
-                our plans and work with the community in a few lines. A summary
-                of our plans and work wi in a few lines. A summary of our plans
-                and work with the community in a few lines.
+                Support the Czar on his way to greatness! Follow the development of the project and participate directly, receiving your unique tokens! The most active comrades will be immortalized in Czarverse!
               </p>
               <div class="button-wrapper">
                 <a href="#" class="button more-button">MARKET</a>
@@ -259,11 +250,7 @@
           <div class="text-block section-3-text-1">
             <div class="text-block-text">
               <p>
-                A summary of our plans and work within a few lines. A summary of
-                our plans and work within a few lines. A summary of our plans
-                and work within a few lines.A summary of our plans and work
-                within a few lines. A summary of our plans and work within a few
-                lines. A summary of our plans and work within a few lines.
+                We're tired of being a conveyor belt of soulless projects. The DNA of the project is derived outside of game studios. The synergy of extensive development experience and the spirit of street art is what makes our team stand out.
               </p>
             </div>
           </div>
@@ -271,11 +258,7 @@
           <div class="text-block right section-3-text-2">
             <div class="text-block-text">
               <p>
-                A summary of our plans and work within a few lines. A summary of
-                our plans and work within a few.A summary of our plans and work
-                within a few lines. A summary of our plans and work within a
-                few.A summary of our plans and work within a few lines. A
-                summary of our plans and work within a few.
+                Crypto is not only a way for us to continue making the game without publishers and investors who can significantly influence the development process. It is a necessary way to increase our security inside a country we don't want to leave. There is a risk that such harmless satire could lead to real repression by government authorities.
               </p>
             </div>
           </div>
@@ -335,7 +318,7 @@
     </div>
 
     <!--  stats.js, tmp  -->
-    <script>
+<!--     <script>
       (function () {
         var script = document.createElement("script");
         script.onload = function () {
@@ -349,7 +332,7 @@
         script.src = "//mrdoob.github.io/stats.js/build/stats.min.js";
         document.head.appendChild(script);
       })();
-    </script>
+    </script> -->
 
     <script type="module">
       import Czarverse from "./build/czarverse.js";
